# qemu-system-ia64

./: .gitignore  Makefile  README.md  configure  meson.build  qemu-options.hx  run.in
accel/tcg/: cpu-exec.c  tb-hash.h  tb-maint.c  translator.c  user-exec.c
configs/devices/ia64-softmmu/: default.mak  minimal.mak
configs/targets/: ia64-softmmu.mak
docs/: .clang-tidy
docs/devel/: ia64-internals.rst  index-internals.rst
docs/devel/testing/: ia64-standard-tests.rst  ia64.rst  index.rst
docs/ia64/: bundle-templates.csv  implemented-acpi.csv  implemented-efi.csv  implemented-instructions.csv  implemented-pal.csv  implemented-sal.csv
docs/system/: target-ia64.rst  targets.rst
hw/char/: serial-mm.c
hw/display/: ati.c  ati_2d.c  vga-pci.c  vga.c  vga_int.h
hw/ia64/: Kconfig  ia64_iosapic.c  ia64_iosapic.h  ia64_loader.c  ia64_pci.c  ia64_vpc.c  meson.build
hw/pci/: pci.c
hw/scsi/: lsi53c895a.c
include/accel/tcg/: cpu-ops.h
include/hw/core/: cpu.h
include/hw/ia64/: ia64_loader.h  ia64_pci.h  ia64_vpc_abi.h
include/qemu/: base-arch-defs.h
include/system/: system.h
python/scripts/: mkvenv.py
qapi/: machine.json
roms/ia64-firmware/: .gitignore  Makefile  boot_shell.c  build_firmware.sh  debug_protocols.c  debug_support.c  decompress.c  dsdt-pci-root.asl  ebc.c  entry.S  firmware.c  firmware.lds  firmware.sources  fw-base.h  fw-boot-shell.h  fw-debug-port.h  fw-debug-support.h  fw-decompress.h  fw-device-path.h  fw-ebc.h  fw-legacy-io.h  fw-pointer.h  fw-services.h  fw-uart.h  fw-uga-io.h  fw-usb.h  legacy_io.c  linker-symbols.h  meson.build  pointer_protocol.c  ssdt-platform-devices.asl  uga_io.c  usb_protocols.c
rust/bindings/: build.rs
rust/hw/char/pl011/: build.rs
scripts/: ia64-compare-decode.py  symlink-install-tree.py
subprojects/libvduse/: libvduse.c  meson.build
subprojects/libvduse/include/: compiler.h
subprojects/libvduse/include/qemu/: atomic.h
subprojects/libvduse/linux-headers/linux/: vduse.h  virtio_config.h
subprojects/libvduse/standard-headers/linux/: types.h
subprojects/libvhost-user/: libvhost-user.c  meson.build
subprojects/libvhost-user/include/qemu/: compiler.h
subprojects/libvhost-user/standard-headers/linux/: virtio_ring.h  virtio_types.h
system/: vl.c
tests/functional/: meson.build
tests/functional/ia64/: __init__.py  console.py  efi_build.py  media.py  meson.build  protocol.py  test_host.py  test_input.py  test_services.py  test_shell.py  test_smoke.py  test_smp.py  test_storage.py  test_tables.py
tests/functional/ia64/apps/: build-test-app.sh  exitbs-app.c  ia64-test-app.lds  ia64-test-child.lds  ia64-test.h  input-app.c  services-app.c  smoke-app.c  smp-app.c  start-image-child-app.c  storage-app.c  tables-app.c
tests/functional/ia64/apps/common/: services.c  services.h
tests/functional/qemu_test/: testcase.py
tests/qemu-iotests/: testenv.py
tests/qtest/: display-vga-test.c  fuzz-lsi53c895a-test.c  ia64-vpc-test.c  meson.build
tests/unit/: ia64-conin-usb-app.c  ia64-storage-io-app.c  ia64-storage-io-app.lds  meson.build  test-ia64-decoder.c  test-ia64-device-inventory.py  test-ia64-firmware-decompress.c  test-ia64-firmware-layout.py  test-ia64-fpreg.c  test-ia64-fw-ata-block.py  test-ia64-fw-boot-path.py  test-ia64-fw-cdrom-boot-path.py  test-ia64-fw-no-fake-tcg.py  test-ia64-fw-platform-tables.py  test-ia64-fw-smoke.py  test-ia64-fw-storage.py  test-ia64-fw-udf-cdrom.py  test-ia64-fw-uefi-services.py  test-ia64-fw-usb-keyboard.py  test-ia64-nvram.py  test-ia64-os-boot-smoke.py  test-ia64-qemu-tcg-2.py  test-ia64-qemu-tcg.py  test-ia64-simd.c  test-ia64-source-includes.py  test-ia64-standard-execution.py  test-ia64-standard-goldens.py
tests/unit/ia64/: __init__.py  case.py  cases_core.py  cases_fp.py  cases_interrupt.py  cases_memory_nat.py  cases_mmu.py  cases_pal.py  cases_rse.py  encoding.py  encoding_branch.py  encoding_common.py  encoding_constants.py  encoding_fp.py  encoding_integer.py  encoding_memory.py  encoding_simd.py  encoding_system.py  fpmodel.py  legacy-case-ids.txt  process.py  qmp.py  registry.py  runner.py  state.py  test_cli.py  test_fpmodel.py  test_gdbstub.py  test_qmp.py  test_state.py  test_tcg_group.py
